tests/baselines/reference/genericSpecializations3.errors.txt
tests/cases/compiler/genericSpecializations3.ts(8,7): error TS2420: Class 'IntFooBad' incorrectly implements interface 'IFoo<数字>'.
  Types of property 'foo' are incompatible.
    Type '(x: 文字) => 文字' is not assignable to type '(x: 数字) => 数字'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '数字' is not assignable to type '文字'.
tests/cases/compiler/genericSpecializations3.ts(28,1): error TS2322: Type 'StringFoo2' is not assignable to type 'IntFoo'.
  Types of property 'foo' are incompatible.
    Type '(x: 文字) => 文字' is not assignable to type '(x: 数字) => 数字'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '数字' is not assignable to type '文字'.
tests/cases/compiler/genericSpecializations3.ts(29,1): error TS2322: Type 'IntFoo' is not assignable to type 'StringFoo2'.
  Types of property 'foo' are incompatible.
    Type '(x: 数字) => 数字' is not assignable to type '(x: 文字) => 文字'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/genericSpecializations3.ts (3 errors) ====
    interface IFoo<T> {
        foo(x: T): T;
    }
    
    var iFoo: IFoo<number>;
    iFoo.foo(1);
    
    class IntFooBad implements IFoo<number> { // error
          ~~~~~~~~~
!!! error TS2420: Class 'IntFooBad' incorrectly implements interface 'IFoo<数字>'.
!!! error TS2420:   Types of property 'foo' are incompatible.
!!! error TS2420:     Type '(x: 文字) => 文字' is not assignable to type '(x: 数字) => 数字'.
!!! error TS2420:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2420:         Type '数字' is not assignable to type '文字'.
        foo(x: string): string { return null; }
    }
    
    var intFooBad: IntFooBad;
    
    class IntFoo implements IFoo<number> {
        foo(x: number): number { return null; }
    }
    
    var intFoo: IntFoo;
    
    class StringFoo2 implements IFoo<string> {
        foo(x: string): string { return null; }
    }
    
    var stringFoo2: StringFoo2;
    stringFoo2.foo("hm");
    
    
    intFoo = stringFoo2; // error
    ~~~~~~
!!! error TS2322: Type 'StringFoo2' is not assignable to type 'IntFoo'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 文字' is not assignable to type '(x: 数字) => 数字'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type '数字' is not assignable to type '文字'.
    stringFoo2 = intFoo; // error
    ~~~~~~~~~~
!!! error TS2322: Type 'IntFoo' is not assignable to type 'StringFoo2'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '(x: 数字) => 数字' is not assignable to type '(x: 文字) => 文字'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type '文字' is not assignable to type '数字'.
    
    
    class StringFoo3 implements IFoo<string> { // error
        foo<T>(x: T): T { return null; }
    }
    var stringFoo3: StringFoo3;